--- a/homepage.html
+++ b/homepage.html
@@ -1,168 +1,148 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿<!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MaskNova Dashboard</title>
-  <style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Christ Gospel Apostolic Church</title>  <style>
     body {
       margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #000000, #0f2027, #2c5364);
-      color: white;
-      overflow-x: hidden;
+      font-family: Georgia, serif;
+      background: #ffffff;
+      color: #1a1a1a;
     }
 
-    /* Header */
+    /* HEADER */
     header {
-      background: #000000aa;
-      padding: 15px 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      box-shadow: 0 0 15px cyan;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
+      text-align: center;
+      padding: 20px 10px 10px;
+      border-bottom: 1px solid #eee;
     }
+
+    header img {
+      width: 50px;
+      height: auto;
+      margin-bottom: 5px;
+    }
+
     header h1 {
-      font-size: 2rem;
-      text-shadow: 0 0 15px cyan, 0 0 30px #00e6e6;
+      font-size: 22px;
+      margin: 5px 0;
+      color: #001f54;
+    }
+
+    header p {
+      font-size: 14px;
+      margin: 0;
+      font-style: italic;
+    }
+
+    /* VERSE & HYMN */
+    .daily-box {
+      margin: 20px;
+      padding: 15px;
+      border-radius: 10px;
+      background: #fafafa;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+      text-align: center;
+    }
+
+    .daily-box h2 {
+      margin-top: 0;
+      font-size: 16px;
+      color: #001f54;
+    }
+
+    .daily-box p {
+      font-size: 15px;
+      margin: 8px 0;
+    }
+
+    /* WATERMARK */
+    .watermark {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      opacity: 0.05;
+      z-index: 0;
+      width: 300px;
+    }
+
+    /* GRID */
+    .grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 15px;
+      padding: 20px;
+      position: relative;
+      z-index: 1;
+    }
+
+    .card {
+      background: #ffffff;
+      border-radius: 15px;
+      padding: 20px 10px;
+      text-align: center;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+      cursor: pointer;
+    }
+
+    .card img {
+      width: 50px;
+      margin-bottom: 10px;
+    }
+
+    .card h3 {
+      margin: 5px 0;
+      color: #001f54;
+    }
+
+    .card p {
+      font-size: 13px;
       margin: 0;
     }
-    .menu-btn {
-      font-size: 1.8rem;
-      cursor: pointer;
-      background: none;
-      border: none;
-      color: cyan;
-    }
 
-    /* Sidebar */
-    .sidebar {
-      height: 100%;
-      width: 0;
-      position: fixed;
-      top: 0;
-      left: 0;
-      background: #111;
-      overflow-x: hidden;
-      transition: 0.3s;
-      padding-top: 60px;
-      box-shadow: 0 0 20px cyan;
-    }
-    .sidebar a {
-      padding: 12px 20px;
-      text-decoration: none;
-      font-size: 1.2rem;
-      color: white;
-      display: block;
-      transition: 0.2s;
-    }
-    .sidebar a:hover {
-      background: cyan;
-      color: black;
-      box-shadow: 0 0 10px cyan;
-    }
-    .close-btn {
-      position: absolute;
-      top: 10px;
-      right: 20px;
-      font-size: 2rem;
-      cursor: pointer;
-      color: red;
-    }
-
-    /* Content Cards */
-    .container {
-      padding: 20px;
-      text-align: center;
-    }
-    .card {
-      background: rgba(255,255,255,0.05);
-      padding: 20px;
-      margin: 20px auto;
-      border-radius: 15px;
-      width: 90%;
-      max-width: 500px;
-      box-shadow: 0 0 20px rgba(0,255,255,0.3);
-      transition: 0.3s;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 0 30px cyan;
-    }
-    .card h2 {
-      margin-bottom: 10px;
-      text-shadow: 0 0 10px cyan;
-    }
-
-    /* Footer */
     footer {
-      background: #000000cc;
-      padding: 15px;
       text-align: center;
-      font-size: 0.9rem;
-      margin-top: 30px;
-      box-shadow: 0 0 10px cyan;
+      font-size: 12px;
+      padding: 10px;
+      color: #666;
     }
-  </style>
-</head>
-<body>
-  <!-- Sidebar -->
-  <div id="mySidebar" class="sidebar">
-    <span class="close-btn" onclick="closeNav()">&times;</span>
-    <a href="#">🎮 Games</a>
-    <a href="#">🤖 AI Assistant</a>
-    <a href="#">🎵 Music</a>
-    <a href="#">🎬 Videos</a>
-    <a href="#">⭐ Special</a>
-  </div>
-
-  <!-- Header -->
-  <header>
-    <h1>MaskNova</h1>
-    <button class="menu-btn" onclick="openNav()">☰</button>
-  </header>
-
-  <!-- Content -->
-  <div class="container">
+  </style></head>
+<body>  <!-- WATERMARK LOGO -->  <img src="logo.png" class="watermark" alt="CGAC Watermark" />  <!-- HEADER -->  <header>
+    <img src="logo.png" alt="CGAC Logo" />
+    <h1>Christ Gospel Apostolic Church</h1>
+    <p>God is our guide</p>
+  </header>  <!-- VERSE OF THE DAY -->  <div class="daily-box">
+    <h2>Verse of the Day</h2>
+    <p>“The Lord shall guide thee continually.”</p>
+    <p><strong>Isaiah 58:11</strong></p>
+  </div>  <!-- HYMN OF THE DAY -->  <div class="daily-box">
+    <h2>Hymn of the Day</h2>
+    <p>Guide Me, O Thou Great Jehovah</p>
+  </div>  <!-- MAIN GRID -->  <div class="grid">
     <div class="card">
-      <h2>🎵 MaskNova Playlists</h2>
-      <p>Discover and enjoy curated music just for you.</p>
-    </div>
-    <div class="card">
-      <h2>🎬 MaskNova Videos</h2>
-      <p>Watch the latest trending and exclusive videos.</p>
-    </div>
-    <div class="card">
-      <h2>⭐ Something Special</h2>
-      <p>Exclusive features and surprises coming soon.</p>
-    </div>
-  </div>
+      <img src="bible.png" alt="Bible" />
+      <h3>Bible</h3>
+      <p>Read the Word</p>
+    </div><div class="card">
+  <img src="hymn.png" alt="Hymns" />
+  <h3>Hymns</h3>
+  <p>Church Hymns</p>
+</div>
 
-  <!-- Footer -->
-  <footer>
-    © 2025 MaskNova Tech. All Rights Reserved.
-  </footer>
+<div class="card">
+  <img src="notes.png" alt="Notes" />
+  <h3>Notes</h3>
+  <p>Write & Save</p>
+</div>
 
-  <script>
-    // Sidebar controls
-    function openNav() {
-      document.getElementById("mySidebar").style.width = "250px";
-    }
-    function closeNav() {
-      document.getElementById("mySidebar").style.width = "0";
-    }
+<div class="card">
+  <img src="star.png" alt="Favorites" />
+  <h3>Favorites</h3>
+  <p>Saved Items</p>
+</div>
 
-    // Display name from index
-    window.onload = function() {
-      const user = localStorage.getItem("masknovaUser");
-      if (user) {
-        alert("Welcome, " + user + " 👋");
-      }
-    };
-  </script>
-</body>
+  </div>  <footer>
+    © Christ Gospel Apostolic Church
+  </footer></body>
 </html>
-
