--- a/homepage.html
+++ b/homepage.html
@@ -111,34 +111,43 @@
     <h2>Hymn of the Day</h2>
     <p>Guide Me, O Thou Great Jehovah</p>
   </div>  <!-- MAIN GRID -->  <div class="grid"><!-- Bible -->
-<div class="card">
-  <svg class="icon" viewBox="0 0 24 24"><path d="M4 3h11a3 3 0 0 1 3 3v15a2 2 0 0 0-2-2H4z"/></svg>
-  <h3>Bible</h3>
-  <p>Read the Word</p>
-</div>
 
-<!-- Hymns -->
-<div class="card">
-  <svg class="icon" viewBox="0 0 24 24"><path d="M3 4h18v2H3zm0 4h18v2H3zm0 4h12v2H3z"/></svg>
-  <h3>Hymns</h3>
-  <p>Church Hymns</p>
-</div>
+<a href="index.html" style="text-decoration:none;color:inherit;">
+  <div class="card">
+    <!-- Open Bible Icon -->
+    <svg class="icon" viewBox="0 0 24 24">
+      <path d="M2 4c4-2 8-2 10 0v16c-2-2-6-2-10 0V4z"/>
+      <path d="M22 4c-4-2-8-2-10 0v16c2-2 6-2 10 0V4z"/>
+      <line x1="12" y1="4" x2="12" y2="20" stroke="#001f54" stroke-width="1"/>
+    </svg>
+    <h3>Bible</h3>
+    <p>Read the Word</p>
+  </div>
+</a><!-- Hymns -->
 
-<!-- Notes -->
-<div class="card">
-  <svg class="icon" viewBox="0 0 24 24"><path d="M5 3h14v18H5z"/></svg>
-  <h3>Notes</h3>
-  <p>Write & Save</p>
-</div>
+<a href="index.html" style="text-decoration:none;color:inherit;">
+  <div class="card">
+    <svg class="icon" viewBox="0 0 24 24"><path d="M3 4h18v2H3zm0 4h18v2H3zm0 4h12v2H3z"/></svg>
+    <h3>Hymns</h3>
+    <p>Church Hymns</p>
+  </div>
+</a><!-- Notes -->
 
-<!-- Favorites -->
-<div class="card">
-  <svg class="icon" viewBox="0 0 24 24"><path d="M12 17l-5 3 2-6-4-4 6-1 3-5 3 5 6 1-4 4 2 6z"/></svg>
-  <h3>Favorites</h3>
-  <p>Saved Items</p>
-</div>
+<a href="index.html" style="text-decoration:none;color:inherit;">
+  <div class="card">
+    <svg class="icon" viewBox="0 0 24 24"><path d="M5 3h14v18H5z"/></svg>
+    <h3>Notes</h3>
+    <p>Write & Save</p>
+  </div>
+</a><!-- Favorites -->
 
-  </div>  <footer>
+<a href="index.html" style="text-decoration:none;color:inherit;">
+  <div class="card">
+    <svg class="icon" viewBox="0 0 24 24"><path d="M12 17l-5 3 2-6-4-4 6-1 3-5 3 5 6 1-4 4 2 6z"/></svg>
+    <h3>Favorites</h3>
+    <p>Saved Items</p>
+  </div>
+</a>  </div>  <footer>
     © Christ Gospel Apostolic Church
   </footer></body>
 </html>
