--- a/homepage.html
+++ b/homepage.html
@@ -133,7 +133,7 @@
   </div>
 </a><!-- Notes -->
 
-<a href="index.html" style="text-decoration:none;color:inherit;">
+<a href="notes.html" style="text-decoration:none;color:inherit;">
   <div class="card">
     <svg class="icon" viewBox="0 0 24 24"><path d="M5 3h14v18H5z"/></svg>
     <h3>Notes</h3>
@@ -151,3 +151,4 @@
     © Christ Gospel Apostolic Church
   </footer></body>
 </html>
+
