--- a/homepage.html
+++ b/homepage.html
@@ -112,7 +112,7 @@
     <p>Guide Me, O Thou Great Jehovah</p>
   </div>  <!-- MAIN GRID -->  <div class="grid"><!-- Bible -->
 
-<a href="index.html" style="text-decoration:none;color:inherit;">
+<a href="bible.html" style="text-decoration:none;color:inherit;">
   <div class="card">
     <!-- Open Bible Icon -->
     <svg class="icon" viewBox="0 0 24 24">
@@ -151,4 +151,5 @@
     © Christ Gospel Apostolic Church
   </footer></body>
 </html>
+
 
