--- a/bible.html
+++ b/bible.html
@@ -2,145 +2,188 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bible – Full Books Box Layout</title>
-  <style>
+  <title>Holy Bible – King James Version</title>  <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f6f6f6;
       margin: 0;
-      padding: 15px;
+      font-family: Georgia, serif;
+      background: #f7f7f7;
+      color: #1a1a1a;
     }
-    h2 { text-align: center; margin-bottom: 10px; }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-      gap: 10px;
-      margin-bottom: 20px;
-    }
-    .box {
+
+    header {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      padding: 14px 16px;
       background: #ffffff;
-      border-radius: 10px;
-      padding: 15px 5px;
-      text-align: center;
-      font-weight: bold;
-      cursor: pointer;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      user-select: none;
+      border-bottom: 1px solid #e5e5e5;
     }
-    .box:hover { background: #eaeaea; }
-    .hidden { display: none; }
+
+    header img { width: 40px; }
+
+    header h1 {
+      font-size: 18px;
+      margin: 0;
+      color: #001f54;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 16px;
+    }
+
+    .selectors {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+      margin-bottom: 12px;
+    }
+
+    select {
+      padding: 10px;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+      font-family: Georgia, serif;
+      font-size: 14px;
+      background: #fff;
+    }
+
+    .source {
+      margin: 8px 0 12px;
+      font-weight: bold;
+      color: #001f54;
+      font-size: 14px;
+    }
+
+    .chapter-box {
+      background: #ffffff;
+      border-radius: 16px;
+      padding: 18px;
+      line-height: 1.8;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+    }
+
+    .verse {
+      display: block;
+      margin-bottom: 6px;
+    }
+
+    .verse sup {
+      color: #001f54;
+      font-size: 11px;
+      margin-right: 4px;
+    }
+
     .nav {
       display: flex;
       justify-content: space-between;
-      margin-bottom: 10px;
+      margin-top: 14px;
+      gap: 10px;
     }
-    .nav button {
-      padding: 6px 10px;
-      border-radius: 8px;
+
+    button {
+      flex: 1;
+      padding: 12px;
+      border-radius: 12px;
       border: none;
-      cursor: pointer;
+      background: #001f54;
+      color: #ffffff;
+      font-size: 14px;
     }
-    .verse-display {
-      background: #ffffff;
-      border-radius: 10px;
-      padding: 15px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    select {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 10px;
-      border-radius: 8px;
-    }
-  </style>
-</head>
-<body><h2 id="title">Bible Books</h2><div class="nav hidden" id="nav">
-  <button onclick="goBooks()">⬅ Books</button>
-  <button onclick="goChapters()">⬅ Chapters</button>
-</div><!-- BOOKS --><div id="books" class="grid"></div><!-- CHAPTERS --><div id="chapters" class="grid hidden"></div><!-- VERSES --><div id="verses" class="grid hidden"></div><!-- VERSE DISPLAY --><div id="verseDisplay" class="verse-display hidden">
-  <select id="versionSelect">
-    <option>KJV</option>
-    <option>NIV</option>
-    <option>ESV</option>
-    <option>NLT</option>
-  </select>
-  <div id="verseText"></div>
-</div><script>
-// FULL BIBLE BOOKS + CHAPTER COUNTS
-const bible = {
-  'Genesis':50,'Exodus':40,'Leviticus':27,'Numbers':36,'Deuteronomy':34,
-  'Joshua':24,'Judges':21,'Ruth':4,'1 Samuel':31,'2 Samuel':24,
-  '1 Kings':22,'2 Kings':25,'1 Chronicles':29,'2 Chronicles':36,
-  'Ezra':10,'Nehemiah':13,'Esther':10,'Job':42,'Psalms':150,
-  'Proverbs':31,'Ecclesiastes':12,'Song of Solomon':8,'Isaiah':66,
-  'Jeremiah':52,'Lamentations':5,'Ezekiel':48,'Daniel':12,
-  'Hosea':14,'Joel':3,'Amos':9,'Obadiah':1,'Jonah':4,'Micah':7,
-  'Nahum':3,'Habakkuk':3,'Zephaniah':3,'Haggai':2,'Zechariah':14,'Malachi':4,
-  'Matthew':28,'Mark':16,'Luke':24,'John':21,'Acts':28,'Romans':16,
-  '1 Corinthians':16,'2 Corinthians':13,'Galatians':6,'Ephesians':6,
-  'Philippians':4,'Colossians':4,'1 Thessalonians':5,'2 Thessalonians':3,
-  '1 Timothy':6,'2 Timothy':4,'Titus':3,'Philemon':1,'Hebrews':13,
-  'James':5,'1 Peter':5,'2 Peter':3,'1 John':5,'2 John':1,'3 John':1,
-  'Jude':1,'Revelation':22
+  </style></head>
+<body><header>
+  <img src="logo.png" alt="CGAC Logo" />
+  <h1>Holy Bible (KJV)</h1>
+</header><div class="container">  <!-- BOOK & CHAPTER -->  <div class="selectors">
+    <select id="book"></select>
+    <select id="chapter"></select>
+  </div>  <!-- SOURCE -->  <div class="source" id="source"></div>  <!-- FULL CHAPTER DISPLAY (UP & CLEAN) -->  <div class="chapter-box" id="chapterText"></div>  <!-- NAVIGATION -->  <div class="nav">
+    <button onclick="prevChapter()">◀ Previous Chapter</button>
+    <button onclick="nextChapter()">Next Chapter ▶</button>
+  </div></div><script>
+/*
+  PROFESSIONAL BIBLE STRUCTURE
+  - FULL KJV stored in kjv.json (offline, public domain)
+  - Displays FULL CHAPTER text at once
+  - No verse grid, no clutter
+*/
+
+let bible = {};
+let currentBook = '';
+let currentChapter = '';
+
+fetch('kjv.json')
+  .then(res => res.json())
+  .then(data => {
+    bible = data;
+    init();
+  });
+
+function init() {
+  const bookSel = document.getElementById('book');
+  bookSel.innerHTML = '';
+
+  Object.keys(bible).forEach(book => {
+    bookSel.add(new Option(book, book));
+  });
+
+  currentBook = bookSel.value;
+  loadChapters();
+}
+
+function loadChapters() {
+  const chapSel = document.getElementById('chapter');
+  chapSel.innerHTML = '';
+
+  Object.keys(bible[currentBook]).forEach(ch => {
+    chapSel.add(new Option('Chapter ' + ch, ch));
+  });
+
+  currentChapter = chapSel.value;
+  renderChapter();
+}
+
+function renderChapter() {
+  const verses = bible[currentBook][currentChapter];
+  let html = '';
+
+  Object.keys(verses).forEach(v => {
+    html += `<span class=\"verse\"><sup>${v}</sup>${verses[v]}</span>`;
+  });
+
+  document.getElementById('chapterText').innerHTML = html;
+  document.getElementById('source').innerText = `${currentBook} ${currentChapter} (KJV)`;
+}
+
+book.onchange = e => {
+  currentBook = e.target.value;
+  loadChapters();
 };
 
-let currentBook = '';
-let currentChapter = 1;
+chapter.onchange = e => {
+  currentChapter = e.target.value;
+  renderChapter();
+};
 
-const booksDiv = document.getElementById('books');
-const chaptersDiv = document.getElementById('chapters');
-const versesDiv = document.getElementById('verses');
-const nav = document.getElementById('nav');
-
-// LOAD BOOKS
-for (let book in bible) {
-  booksDiv.innerHTML += `<div class="box" onclick="openChapters('${book}')">${book}</div>`;
-}
-
-function openChapters(book) {
-  currentBook = book;
-  document.getElementById('title').innerText = book + ' – Chapters';
-  booksDiv.classList.add('hidden');
-  chaptersDiv.classList.remove('hidden');
-  nav.classList.remove('hidden');
-  chaptersDiv.innerHTML = '';
-
-  for (let i = 1; i <= bible[book]; i++) {
-    chaptersDiv.innerHTML += `<div class="box" onclick="openVerses(${i})">${i}</div>`;
+function prevChapter() {
+  const chapters = Object.keys(bible[currentBook]);
+  let i = chapters.indexOf(currentChapter);
+  if (i > 0) {
+    currentChapter = chapters[i - 1];
+    chapter.value = currentChapter;
+    renderChapter();
   }
 }
 
-function openVerses(chapter) {
-  currentChapter = chapter;
-  chaptersDiv.classList.add('hidden');
-  versesDiv.classList.remove('hidden');
-  document.getElementById('title').innerText = `${currentBook} ${chapter}`;
-  versesDiv.innerHTML = '';
-
-  for (let i = 1; i <= 50; i++) {
-    versesDiv.innerHTML += `<div class="box" onclick="showVerse(${i})">${i}</div>`;
+function nextChapter() {
+  const chapters = Object.keys(bible[currentBook]);
+  let i = chapters.indexOf(currentChapter);
+  if (i < chapters.length - 1) {
+    currentChapter = chapters[i + 1];
+    chapter.value = currentChapter;
+    renderChapter();
   }
-}
-
-function showVerse(verse) {
-  document.getElementById('verseDisplay').classList.remove('hidden');
-  document.getElementById('verseText').innerHTML = `<strong>${currentBook} ${currentChapter}:${verse}</strong><br><br>Verse text will load here (API / database ready).`;
-}
-
-function goBooks() {
-  booksDiv.classList.remove('hidden');
-  chaptersDiv.classList.add('hidden');
-  versesDiv.classList.add('hidden');
-  document.getElementById('verseDisplay').classList.add('hidden');
-  nav.classList.add('hidden');
-  document.getElementById('title').innerText = 'Bible Books';
-}
-
-function goChapters() {
-  versesDiv.classList.add('hidden');
-  chaptersDiv.classList.remove('hidden');
-  document.getElementById('verseDisplay').classList.add('hidden');
-  document.getElementById('title').innerText = currentBook + ' – Chapters';
 }
 </script></body>
 </html>
