Update index.html with manifest and theme color
Added manifest link and theme color meta tag.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ﻿<!DOCTYPE html><html lang="en">
 <head>
+    <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#001f54">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CGAC Splash Screen</title><style>
@@ -46,3 +48,4 @@
 
 </body>
 </html>
+
