--- a/notes.html
+++ b/notes.html
@@ -1,5 +1,7 @@
 ﻿<!DOCTYPE html><html lang="en">
 <head>
+  <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#001f54">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CGAC Notes</title>  <style>
@@ -168,3 +170,4 @@
     renderNotes();
   </script></body>
 </html>
+
