--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
 <h1>CGAC</h1>
 
 <script src="splash.js"></script>
+    <script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("service-worker.js")
+    .then(() => console.log("Service Worker Registered"));
+}
+    </script>
 
 </body>
 </html>
+
 
