--- a/homepage.html
+++ b/homepage.html
@@ -101,6 +101,12 @@
       color: #666;
     }
   </style></head>
+   <script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("service-worker.js")
+    .then(() => console.log("Service Worker Registered"));
+}
+   </script>
 <body>  <!-- WATERMARK LOGO -->  <img src="logo.png" class="watermark" alt="CGAC Watermark" />  <!-- HEADER -->  <header>
     <img src="logo.png" alt="CGAC Logo" />
     <h1>Christ Gospel Apostolic Church</h1>
@@ -153,6 +159,7 @@
     © Christ Gospel Apostolic Church
   </footer></body>
 </html>
+
 
 
 
