Update bible.html with manifest and theme color

--- a/bible.html
+++ b/bible.html
@@ -3,6 +3,8 @@
 <html lang="en">
 
 <head>
+    <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#001f54">
 
 <meta charset="UTF-8">
 
@@ -347,3 +349,4 @@ function fetchVerse() {
 </body>
 
 </html>
+
