Add service worker for offline capabilities
Added service worker registration for offline support.

--- a/bible.html
+++ b/bible.html
@@ -344,9 +344,15 @@ function fetchVerse() {
 
 </script>
 
-
+<script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("service-worker.js")
+    .then(() => console.log("Service Worker Registered"));
+}
+</script>
 
 </body>
 
 </html>
+
 
