--- a/homepage.html
+++ b/homepage.html
@@ -133,7 +133,7 @@ if ("serviceWorker" in navigator) {
   </div>
 </a><!-- Hymns -->
 
-<a href="index.html" style="text-decoration:none;color:inherit;">
+<a href="hymn.html" style="text-decoration:none;color:inherit;">
   <div class="card">
     <svg class="icon" viewBox="0 0 24 24"><path d="M3 4h18v2H3zm0 4h18v2H3zm0 4h12v2H3z"/></svg>
     <h3>Hymns</h3>
@@ -159,6 +159,7 @@ if ("serviceWorker" in navigator) {
     © Christ Gospel Apostolic Church
   </footer></body>
 </html>
+
 
 
 
