--- a/hymn.html
+++ b/hymn.html
@@ -3,6 +3,8 @@
 <html lang="en">
 
 <head>
+    <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#001f54">
 
     <meta charset="UTF-8">
 
@@ -301,3 +303,4 @@ Amin.
 </body>
 
 </html>
+
