--- a/hymn.html
+++ b/hymn.html
@@ -297,10 +297,16 @@ Amin.
     }
 
 </script>
-
+<script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("service-worker.js")
+    .then(() => console.log("Service Worker Registered"));
+}
+</script>
 
 
 </body>
 
 </html>
+
 
