--- a/homepage.html
+++ b/homepage.html
@@ -155,10 +155,19 @@ if ("serviceWorker" in navigator) {
     <h3>Favorites</h3>
     <p>Saved Items</p>
   </div>
+  <!-- Sermons -->
+<div class="card" onclick="location.href='sermons.html'" style="cursor:pointer;">
+  <svg class="icon" viewBox="0 0 24 24">
+    <path d="M4 4h12a2 2 0 0 1 2 2v12l-4-3-4 3-4-3-4 3V6a2 2 0 0 1 2-2z"/>
+  </svg>
+  <h3>Sermons</h3>
+  <p>Watch & Listen</p>
+</div>
 </a>  </div>  <footer>
     © Christ Gospel Apostolic Church
   </footer></body>
 </html>
+
 
 
 
