--- a/homepage.html
+++ b/homepage.html
@@ -61,27 +61,32 @@
     }
 
     .grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 16px;
-      padding: 20px;
-      position: relative;
-      z-index: 1;
-    }
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 16px;
+  align-items: stretch;
+}
 
     .card {
-      background: #ffffff;
-      border-radius: 16px;
-      padding: 20px 10px;
-      text-align: center;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-    }
+  background: #ffffff;
+  border-radius: 16px;
+  padding: 20px 10px;
+  text-align: center;
+  box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  min-height: 140px;
+  cursor: pointer;
+      }
 
     .icon {
-      width: 40px;
-      height: 40px;
-      margin-bottom: 10px;
-      fill: #001f54;
+  width: 42px;
+  height: 42px;
+  margin-bottom: 12px;
     }
 
     .card h3 {
@@ -169,6 +174,7 @@ if ("serviceWorker" in navigator) {
     © Christ Gospel Apostolic Church
   </footer></body>
 </html>
+
 
 
 
