--- a/homepage.html
+++ b/homepage.html
@@ -152,18 +152,20 @@ if ("serviceWorker" in navigator) {
     <h3>Notes</h3>
     <p>Write & Save</p>
   </div>
-</a><!-- Favorites -->
+<!-- Sermons -->
+<div class="card" onclick="location.href='sermons.html'">
 
-<a href="index.html" style="text-decoration:none;color:inherit;">
-  <div class="card">
-    <svg class="icon" viewBox="0 0 24 24"><path d="M12 17l-5 3 2-6-4-4 6-1 3-5 3 5 6 1-4 4 2 6z"/></svg>
-    <h3>Favorites</h3>
-    <p>Saved Items</p>
-  </div
+  <img src="sermon.png" class="card-img">
+
+  <h3>Sermons</h3>
+  <p>Watch Messages</p>
+
+</div>
 </a>  </div>  <footer>
     © Christ Gospel Apostolic Church
   </footer></body>
 </html>
+
 
 
 
