--- a/homepage.html
+++ b/homepage.html
@@ -152,19 +152,22 @@ if ("serviceWorker" in navigator) {
     <h3>Notes</h3>
     <p>Write & Save</p>
   </div>
-<!-- Sermons -->
-<div class="card" onclick="location.href='sermons.html'">
-
-  <img src="sermon.png" class="card-img">
-
-  <h3>Sermons</h3>
-  <p>Watch Messages</p>
-
-</div>
+  </a><!-- sermons -->
+  
+<a href="sermons.html" style="text-decoration:none;color:inherit;">
+  <div class="card">
+    <svg class="icon" viewBox="0 0 24 24">
+      <path d="M4 4h12a2 2 0 0 1 2 2v12l-4-3-4 3-4-3-4 3V6a2 2 0 0 1 2-2z"/>
+    </svg>
+    <h3>Sermons</h3>
+    <p>Watch & Listen</p>
+  </div>
+</a>
 </a>  </div>  <footer>
     © Christ Gospel Apostolic Church
   </footer></body>
 </html>
+
 
 
 
